--- a/starter-webapp/pom.xml
+++ b/starter-webapp/pom.xml
@@ -1,354 +1,56 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.11.RELEASE</version>
+    </parent>
+
     <groupId>com.manning.pl</groupId>
     <artifactId>profile-mvc</artifactId>
-    <version>1.0</version>
+    <version>1.1</version>
     <name>Profile Management</name>
     <description>Profile management</description>
-    <packaging>war</packaging>
-    <properties>
-
-        <!-- Spring boot 2.2.11.RELEASE dependencies copied from spring.boot.dependencies pom.xml -->
-        <activemq.version>5.15.13</activemq.version>
-        <antlr2.version>2.7.7</antlr2.version>
-        <appengine-sdk.version>1.9.82</appengine-sdk.version>
-        <artemis.version>2.10.1</artemis.version>
-        <aspectj.version>1.9.6</aspectj.version>
-        <assertj.version>3.13.2</assertj.version>
-        <atomikos.version>4.0.6</atomikos.version>
-        <awaitility.version>4.0.3</awaitility.version>
-        <bitronix.version>2.1.4</bitronix.version>
-        <byte-buddy.version>1.10.17</byte-buddy.version>
-        <caffeine.version>2.8.6</caffeine.version>
-        <cassandra-driver.version>3.7.2</cassandra-driver.version>
-        <classmate.version>1.5.1</classmate.version>
-        <commons-codec.version>1.13</commons-codec.version>
-        <commons-dbcp2.version>2.7.0</commons-dbcp2.version>
-        <commons-lang3.version>3.9</commons-lang3.version>
-        <commons-pool.version>1.6</commons-pool.version>
-        <commons-pool2.version>2.7.0</commons-pool2.version>
-        <couchbase-client.version>2.7.16</couchbase-client.version>
-        <couchbase-cache-client.version>2.1.0</couchbase-cache-client.version>
-        <dependency-management-plugin.version>1.0.10.RELEASE</dependency-management-plugin.version>
-        <db2-jdbc.version>11.5.4.0</db2-jdbc.version>
-        <derby.version>10.14.2.0</derby.version>
-        <dropwizard-metrics.version>4.1.14</dropwizard-metrics.version>
-        <ehcache.version>2.10.6</ehcache.version>
-        <ehcache3.version>3.8.1</ehcache3.version>
-        <embedded-mongo.version>2.2.0</embedded-mongo.version>
-        <flyway.version>6.0.8</flyway.version>
-        <freemarker.version>2.3.30</freemarker.version>
-        <elasticsearch.version>6.8.13</elasticsearch.version>
-        <glassfish-el.version>3.0.3</glassfish-el.version>
-        <glassfish-jaxb.version>2.3.3</glassfish-jaxb.version>
-        <groovy.version>2.5.13</groovy.version>
-        <gson.version>2.8.6</gson.version>
-        <h2.version>1.4.200</h2.version>
-        <hamcrest.version>2.1</hamcrest.version>
-        <hazelcast.version>3.12.10</hazelcast.version>
-        <hazelcast-hibernate5.version>1.3.2</hazelcast-hibernate5.version>
-        <hibernate.version>5.4.22.Final</hibernate.version>
-        <hibernate-validator.version>6.0.21.Final</hibernate-validator.version>
-        <hikaricp.version>3.4.5</hikaricp.version>
-        <hsqldb.version>2.5.1</hsqldb.version>
-        <htmlunit.version>2.36.0</htmlunit.version>
-        <httpasyncclient.version>4.1.4</httpasyncclient.version>
-        <httpclient.version>4.5.13</httpclient.version>
-        <httpcore.version>4.4.13</httpcore.version>
-        <infinispan.version>9.4.20.Final</infinispan.version>
-        <influxdb-java.version>2.15</influxdb-java.version>
-        <!-- deprecated since 2.1 in favor of "jackson-bom.version" -->
-        <jackson.version>2.10.5</jackson.version>
-        <jackson-bom.version>${jackson.version}</jackson-bom.version>
-        <jakarta-activation.version>1.2.2</jakarta-activation.version>
-        <jakarta-annotation.version>1.3.5</jakarta-annotation.version>
-        <jakarta-jms.version>2.0.3</jakarta-jms.version>
-        <jakarta-json.version>1.1.6</jakarta-json.version>
-        <jakarta-json-bind.version>1.0.2</jakarta-json-bind.version>
-        <jakarta-mail.version>1.6.5</jakarta-mail.version>
-        <jakarta-persistence.version>2.2.3</jakarta-persistence.version>
-        <jakarta-servlet.version>4.0.4</jakarta-servlet.version>
-        <jakarta-servlet-jsp.version>2.3.5</jakarta-servlet-jsp.version>
-        <jakarta-servlet-jsp-jstl.version>1.2.7</jakarta-servlet-jsp-jstl.version>
-        <jakarta-transaction.version>1.3.3</jakarta-transaction.version>
-        <jakarta-validation.version>2.0.2</jakarta-validation.version>
-        <jakarta-websocket.version>1.1.2</jakarta-websocket.version>
-        <jakarta-ws-rs.version>2.1.6</jakarta-ws-rs.version>
-        <jakarta-xml-bind.version>2.3.3</jakarta-xml-bind.version>
-        <jakarta-xml-soap.version>1.4.2</jakarta-xml-soap.version>
-        <jakarta-xml-ws.version>2.3.3</jakarta-xml-ws.version>
-        <janino.version>3.1.2</janino.version>
-        <javax-activation.version>1.2.0</javax-activation.version>
-        <javax-annotation.version>1.3.2</javax-annotation.version>
-        <javax-cache.version>1.1.1</javax-cache.version>
-        <javax-jaxws.version>2.3.1</javax-jaxws.version>
-        <javax-jaxb.version>2.3.1</javax-jaxb.version>
-        <javax-jms.version>2.0.1</javax-jms.version>
-        <javax-json.version>1.1.4</javax-json.version>
-        <javax-jsonb.version>1.0</javax-jsonb.version>
-        <javax-mail.version>1.6.2</javax-mail.version>
-        <javax-money.version>1.0.3</javax-money.version>
-        <javax-persistence.version>2.2</javax-persistence.version>
-        <javax-transaction.version>1.3</javax-transaction.version>
-        <javax-validation.version>2.0.1.Final</javax-validation.version>
-        <javax-websocket.version>1.1</javax-websocket.version>
-        <jaxen.version>1.2.0</jaxen.version>
-        <jaybird.version>3.0.9</jaybird.version>
-        <jboss-logging.version>3.4.1.Final</jboss-logging.version>
-        <jboss-transaction-spi.version>7.6.0.Final</jboss-transaction-spi.version>
-        <jdom2.version>2.0.6</jdom2.version>
-        <jedis.version>3.1.0</jedis.version>
-        <jersey.version>2.29.1</jersey.version>
-        <jest.version>6.3.1</jest.version>
-        <jetty.version>9.4.33.v20201020</jetty.version>
-        <jetty-jsp.version>2.2.0.v201112011158</jetty-jsp.version>
-        <jetty-el.version>8.5.54</jetty-el.version>
-        <jetty-reactive-httpclient.version>1.0.3</jetty-reactive-httpclient.version>
-        <jmustache.version>1.15</jmustache.version>
-        <jna.version>4.5.2</jna.version>
-        <joda-time.version>2.10.8</joda-time.version>
-        <jolokia.version>1.6.2</jolokia.version>
-        <!-- Deprecated in favor of "johnzon.version" -->
-        <johnzon-jsonb.version>1.2.8</johnzon-jsonb.version>
-        <johnzon.version>${johnzon-jsonb.version}</johnzon.version>
-        <jooq.version>3.12.4</jooq.version>
-        <jsonassert.version>1.5.0</jsonassert.version>
-        <json-path.version>2.4.0</json-path.version>
-        <jstl.version>1.2</jstl.version>
-        <jtds.version>1.3.1</jtds.version>
-        <junit.version>4.12</junit.version>
-        <junit-jupiter.version>5.5.2</junit-jupiter.version>
-        <kafka.version>2.3.1</kafka.version>
-        <kotlin.version>1.3.72</kotlin.version>
-        <kotlin-coroutines.version>1.3.8</kotlin-coroutines.version>
-        <lettuce.version>5.2.2.RELEASE</lettuce.version>
-        <liquibase.version>3.8.9</liquibase.version>
-        <log4j2.version>2.12.1</log4j2.version>
-        <logback.version>1.2.3</logback.version>
-        <lombok.version>1.18.16</lombok.version>
-        <mariadb.version>2.4.4</mariadb.version>
-        <micrometer.version>1.3.15</micrometer.version>
-        <mimepull.version>1.9.13</mimepull.version>
-        <mockito.version>3.1.0</mockito.version>
-        <mongo-driver-reactivestreams.version>1.12.0</mongo-driver-reactivestreams.version>
-        <mongodb.version>3.11.2</mongodb.version>
-        <mssql-jdbc.version>7.4.1.jre8</mssql-jdbc.version>
-        <mysql.version>8.0.22</mysql.version>
-        <nekohtml.version>1.9.22</nekohtml.version>
-        <neo4j-ogm.version>3.2.17</neo4j-ogm.version>
-        <netty.version>4.1.53.Final</netty.version>
-        <netty-tcnative.version>2.0.34.Final</netty-tcnative.version>
-        <nio-multipart-parser.version>1.1.0</nio-multipart-parser.version>
-        <ojdbc.version>19.3.0.0</ojdbc.version>
-        <okhttp3.version>3.14.9</okhttp3.version>
-        <oracle-database.version>19.3.0.0</oracle-database.version>
-        <pooled-jms.version>1.0.6</pooled-jms.version>
-        <postgresql.version>42.2.18</postgresql.version>
-        <prometheus-pushgateway.version>0.7.0</prometheus-pushgateway.version>
-        <quartz.version>2.3.2</quartz.version>
-        <querydsl.version>4.2.2</querydsl.version>
-        <rabbit-amqp-client.version>5.7.3</rabbit-amqp-client.version>
-        <reactor-bom.version>Dysprosium-SR13</reactor-bom.version>
-        <rest-assured.version>3.3.0</rest-assured.version>
-        <reactive-streams.version>1.0.3</reactive-streams.version>
-        <rsocket.version>1.0.3</rsocket.version>
-        <rxjava.version>1.3.8</rxjava.version>
-        <rxjava-adapter.version>1.2.1</rxjava-adapter.version>
-        <rxjava2.version>2.2.20</rxjava2.version>
-        <selenium.version>3.141.59</selenium.version>
-        <selenium-htmlunit.version>2.36.0</selenium-htmlunit.version>
-        <sendgrid.version>4.4.8</sendgrid.version>
-        <servlet-api.version>4.0.1</servlet-api.version>
-        <slf4j.version>1.7.30</slf4j.version>
-        <snakeyaml.version>1.25</snakeyaml.version>
-        <solr.version>8.2.0</solr.version>
-        <spring-amqp.version>2.2.12.RELEASE</spring-amqp.version>
-        <spring-batch.version>4.2.4.RELEASE</spring-batch.version>
-        <spring-cloud-connectors.version>2.0.7.RELEASE</spring-cloud-connectors.version>
-        <spring-data-releasetrain.version>Moore-SR11</spring-data-releasetrain.version>
-        <spring-framework.version>5.2.10.RELEASE</spring-framework.version>
-        <spring-hateoas.version>1.0.5.RELEASE</spring-hateoas.version>
-        <spring-integration.version>5.2.9.RELEASE</spring-integration.version>
-        <spring-kafka.version>2.3.12.RELEASE</spring-kafka.version>
-        <spring-ldap.version>2.3.3.RELEASE</spring-ldap.version>
-        <spring-restdocs.version>2.0.5.RELEASE</spring-restdocs.version>
-        <spring-retry.version>1.2.5.RELEASE</spring-retry.version>
-        <spring-security.version>5.2.7.RELEASE</spring-security.version>
-        <spring-session-bom.version>Corn-SR4</spring-session-bom.version>
-        <spring-ws.version>3.0.10.RELEASE</spring-ws.version>
-        <sqlite-jdbc.version>3.28.0</sqlite-jdbc.version>
-        <sun-mail.version>${jakarta-mail.version}</sun-mail.version>
-        <saaj-impl.version>1.5.2</saaj-impl.version>
-        <thymeleaf.version>3.0.11.RELEASE</thymeleaf.version>
-        <thymeleaf-extras-springsecurity.version>3.0.4.RELEASE</thymeleaf-extras-springsecurity.version>
-        <thymeleaf-layout-dialect.version>2.4.1</thymeleaf-layout-dialect.version>
-        <thymeleaf-extras-data-attribute.version>2.0.1</thymeleaf-extras-data-attribute.version>
-        <thymeleaf-extras-java8time.version>3.0.4.RELEASE</thymeleaf-extras-java8time.version>
-        <tomcat.version>9.0.39</tomcat.version>
-        <unboundid-ldapsdk.version>4.0.14</unboundid-ldapsdk.version>
-        <undertow.version>2.0.32.Final</undertow.version>
-        <webjars-hal-browser.version>3325375</webjars-hal-browser.version>
-        <webjars-locator-core.version>0.41</webjars-locator-core.version>
-        <wsdl4j.version>1.6.3</wsdl4j.version>
-        <xmlunit2.version>2.6.4</xmlunit2.version>
-
-        <!-- profile-mvc initial dependencies -->
-        <spring.version>5.2.10.RELEASE</spring.version>
-        <spring-dat-jpa.version>2.3.5.RELEASE</spring-dat-jpa.version>
-
-        <spring-boot.version>2.2.11.RELEASE</spring-boot.version>
-    </properties>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-orm</artifactId>
-            <version>${spring.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-jpa</artifactId>
-            <version>${spring-dat-jpa.version}</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>spring-tx</artifactId>
-                    <groupId>org.springframework</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>spring-aop</artifactId>
-                    <groupId>org.springframework</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>spring-asm</artifactId>
-                    <groupId>org.springframework</groupId>
-                </exclusion>
-            </exclusions>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-
-        <!-- API, java.xml.bind module -->
-        <dependency>
-            <groupId>jakarta.xml.bind</groupId>
-            <artifactId>jakarta.xml.bind-api</artifactId>
-            <version>${jakarta-xml-bind.version}</version>
-        </dependency>
-
-        <!-- Runtime, com.sun.xml.bind module -->
-        <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-runtime</artifactId>
-            <version>${glassfish-jaxb.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish</groupId>
-            <artifactId>jakarta.el</artifactId>
-            <version>${glassfish-el.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>${hibernate.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate.validator</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <version>${hibernate-validator.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
-            <version>${hikaricp.version}</version>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-            <optional>true</optional>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.thymeleaf</groupId>
-            <artifactId>thymeleaf-spring5</artifactId>
-            <version>${thymeleaf.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.thymeleaf</groupId>
-            <artifactId>thymeleaf</artifactId>
-            <version>${thymeleaf.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>${servlet-api.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>${javax-jaxb.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- test scope -->
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit-jupiter.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit-jupiter.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>${assertj.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>${spring.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-junit-jupiter</artifactId>
-            <version>${mockito.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
-            <version>${hamcrest.version}</version>
         </dependency>
     </dependencies>
     <build>
